--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ script:
   - npm run lint
   - ng test --code-coverage --single-run
 after_success: 'npm run coveralls'
+branches:
+  only:
+    - master
+    - develop
