--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^3.3.1",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "ng2-file-upload": "^1.2.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "xml2js": "^0.4.17",
